2001-09-21  Philippe Elie  <ph_e@club-internet.fr>

	* Makefile.in: remove aclocal.m4 in distclean
	* pp/Makefile.in: use $(CXX) and $(CXXFLAGS)

	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/opf_filter.h:
	* pp/oprofpp.c:
	* pp/oprofpp.h: cleanup

2001-09-20  Philippe Elie  <ph_e@club-internet.fr>

	* Makefile.in: minor change in module building
	* pp/Makefile.in: link oprofpp with opf_filter
	* pp/op_to_source: avoid pipe from oprofpp to opf_filter
	* pp/opf_filter.h: remove a few member function
	* pp/opf_container.cpp: ditto + minor cleanup
	* pp/opf_filter.cpp: oprofpp is no longer piped to opf_filter
	  but linked with it. Many change, needs additional cleanup
	* pp/oprofpp.c: group all stuff in two class. Rather a
	  a C with class than a full C++ file for now. Fix a bug
	  in filename handling.
	* pp/oprofpp.h: add opp_bfd and opp_samples_files class.
	
	* dae/opd_util.c: add a few explicit cast for C++ compile
	* dae/opd_util.h: wrap function declaratio with extern "C"

2001-09-19  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: fix silly read valid bug
 
2001-09-19  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: whoops, missed op_util.o from build
 
2001-09-19  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: fix little bug, tidy a bit

	* TODO: update
 
2001-09-18  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in:
	* op_syscalls.c:
	* op_util.c:
	* oprofile.h: move some code around

	* oprofile.c: fix a tiny bug

2001-09-18  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c:
	* dae/oprofiled.h: implement hashing of images

	* doc/oprofile.sgml: fix -- issue and use <screen>
 
2001-09-18  John Levon  <moz@compsoc.man.ac.uk>

	* .cvsignore:
	* README: update
 
	* configure.in: small cleanup
 
	* op_init.c: add comment

	* oprofile.h: 
	* op_syscalls.c:
	* op_x86.c: move fixmap stuff, remove disable APIC

	* oprofile.c: init failure fix 
 
	* doc/oprofile.sgml:
	* dae/opd_proc.c: fix handle_old_sample_files() bug,